# HelloCpp

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  Hello.cpp
